--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,53 @@
 
 # Windows files
 *.ini
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/thumbnail.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/thumbnail.0000.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0047.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0046.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0045.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0044.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0043.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0042.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0041.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0040.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0039.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0038.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0037.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0036.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0035.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0034.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0033.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0032.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0031.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0030.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0029.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0028.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0027.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0026.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0025.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0024.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0023.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0022.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0021.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0020.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0019.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0018.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0017.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0016.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0015.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0014.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0013.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0012.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0011.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0010.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0009.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0008.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0007.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0006.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0005.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0004.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0003.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0002.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0001.jpg
+Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0000.jpg
