--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF
 Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0002.jpg
 Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0001.jpg
 Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary/Animations/Human@DEF_WalkN.anim/sequence/thumbnail.0000.jpg
+/Assets/Animations/Animation Rigs/Human/Assets/StudioLibrary
